fix desktop z-index

--- a/assets/styles/components/_connect-wallet.scss
+++ b/assets/styles/components/_connect-wallet.scss
@@ -13,7 +13,9 @@
 }
 
 .connect-wallet-modal {
-  z-index: 999 !important;
+  @include mobile {
+    z-index: 999 !important;
+  }
 
   .modal-content {
     border: none !important;
